2008-05-16  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/: Fix wait time length bug.  Remove 0 backoff
	count support.  Removed various extraneous min/max checks.  Fix
	various signed/unsigned config issues.  Remove debug logging
	facilities.  Re-work config file parsing to parse before cmdline
	parsing.

	* libfreeipmi/src/api/ipmi-ctx.h,
	common/src/tool-cmdline-common.c,
	common/src/tool-cmdline-common.h: Fix signed/unsigned config
	issues.

	* ipmipower/ipmipower.8.pre.in: Fix incorrect descriptions.

	* common/doc/manpage-common-outofband-retransmission-timeout.man:
	Note value cannot be larger than session timeout.

	* Re-arch most tools to verify tool specific args within
	tool_config_argp_parse instead of inside main.

	* common/src/tool-cmdline-common.c,
	common/src/tool-cmdline-common.h: Cleanup.  Remove unused macros.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-timeout.man: Fix text.

	* common/doc/manpage-common-outofband-timeout.man: Split into
	manpage-common-outofband-session-timeout.man and
	manpage-common-outofband-retransmission-timeout.man.

	* Adjust all manpages appropriately for change.

	* ipmipower/: Use common manpages as appropriate.

	* ipmiconsole/src/ipmiconsole/: Support --session-timeout and
	--retransmission-timeout options.

	* common/doc/manpage-common-cipher-suite-id.man: Split into
	manpage-common-cipher-suite-id-main.man and
	manpage-common-cipher-suite-id-details.man.
	
	* Adjust all manpages appropriately for change.

	* ipmiconsole/: Use common manpages as appropriate.

	* common/src/tool-cmdline-common.c (common_parse_opt): Check that session
	timeout and retransmission timeout are not zero.

	* common/src/tool-cmdline-common.c (verify_common_cmd_args): Check
	that retransmission timeout is not larger than session timeout.

	* ipmipower/: Various cmdline input changes to make ipmipower more
	like other tools.

2008-05-15  Albert Chu <chu11@llnl.gov>
